# bai

./: .gitignore  .gitmodules  CLAUDE.md  README.md  arc_agi_env.py  arc_agi_prompts.py  autumn_env.py  b_learn.py  b_learn_improve.py  commands.txt  eval.py  explore.py  improve.py  launch.py  llm_utils.py  main.py  mixed_explore.py  mixed_improve.py  offline.py  openhands_stepwise.py  pyproject.toml  question_scoring.py  rollout.py  run_utils.py  setup.sh  simple_stepwise.py  stepwise_b_learn.py  stepwise_b_learn_improve.py  stepwise_eb_learn.py  stepwise_eb_learn_improve.py  stepwise_explore.py  test_arc.py  ttyrecs.db
.github/workflows/: deploy-viz-pages.yml
agentic/: base_agent.py  hprop_agent.py  simple_agent.py  utils.py
analysis/: print_end_states.py  stepwise_eb_learn_lava_perception_analysis_2026-04-12.txt
analysis/march03/: contamination_analysis.txt  explore_run_analysis.txt  explore_run_full_step_analysis.txt  human_expert_quest_play.json  perf_jump_analysis.txt
curated/beliefs/: learned_s15_quest_beliefs_seperate_wm_pi.txt  learned_s15_quest_wm_seperate_wm_pi.txt  learned_s19_quest_beliefs.txt  learned_s19_quest_beliefs_w_policy_hints.txt  minihack_easy_manual.txt
curated/perc/: perc.py
curated_beliefs/: minihack_lavacross_manual.txt  minihack_quest_manual.txt
data/stepwise_eb_runs/: index.json
data/stepwise_eb_runs/apr12-eb-learn-skip3-r1/: combined_trajectory.json  experiment_timeline.json  qa_timeline.json  report.json
data/stepwise_eb_runs/apr8-eb-learn-explore-r1/: combined_trajectory.json  experiment_timeline.json  qa_timeline.json  report.json
data/stepwise_eb_runs/apr8-eb-learn-explore-r2/: combined_trajectory.json  experiment_timeline.json  qa_timeline.json  report.json
data/stepwise_eb_runs/apr8-eb-learn-goal-directed-r1/: combined_trajectory.json  experiment_timeline.json  qa_timeline.json  report.json
notes/: mixed_explore.md
plans/: b_learning.md  experiment_scoring.md  experiment_scoring_w_probes.md  mixed_explore.md  question_selection_bdiff.md  simple_agent_baseline.md  stepwise_b_learning.md  stepwise_eb_learning.md
prompt_playground/: b_improve.txt  b_improve_response.txt  llm_config.yaml
sandbox/: call_or_llm.py  eval_explore.py  replay_improve_prompt.py  visualize_explore.py  viz_balrog.py
scripts/: call_llm.py  eval_explore.py  explore_minihack.py  play.py  play_step.py  query_llm.py  replay.py  rescore_questions_offline.py  summarise.py  test_cursor_on_moments.py  test_cursor_regex.py  test_execution_report.py  test_map_regex_detail.py  test_map_regex_newlines.py  test_perception_on_moment.py  test_perception_regex.py  visualize_b_learn.py  visualize_mixed_explore.py  visualize_stepwise_b_learn.py
trajectories/MiniHack-Quest-Easy-v0/: 2026-03-06T12-04-28.090269.json
viz/: README.md  __init__.py  export_stepwise_eb_static.py  index.html  stepwise_eb_viewer_data.py  visualize_stepwise_eb_learn.py
viz/stepwise_eb_learn/: app.js  index.html
wm/: build_hstar.py  eval.py  eval_hset.py  evolve.py  hstar.txt  utils.py  wm.py
(+395 files in other folders)
