[project]
name = "bai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fire>=0.7.1",
    "gymnasium==1.0.0",
    "jinja2>=3.1.6",
    "litellm>=1.79.3",
    "matplotlib==3.10.7",
    "minihack==1.0.2",
    "pillow==12.0.0",
    "tenacity>=9.1.2",
]
