[project]
name = "bai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv==1.2.1",
    "fire==0.7.1",
    "gymnasium==1.2.2",
    "jinja2==3.1.6",
    "litellm==1.80.7",
    "matplotlib==3.10.7",
    "pillow==12.0.0",
    "tenacity==9.1.2",
    "openai==2.8.1",
    "anthropic==0.74.0",
    "google-generativeai==0.8.5",
    "hydra-core==1.3.2",
    "opencv-python-headless==4.12.0.88",
    "wandb==0.23.0",
    "pytest==7.4.4",
    "scipy==1.16.3",
    "crafter==1.8.3",
    "gym==0.23",
    "requests==2.32.5",
    "minihack>=1.0.2",
    "textworld @ git+https://github.com/balrog-ai/TextWorld.git",
    "tatsu==5.8.3",
    "minigrid @ git+https://github.com/BartekCupial/Minigrid.git",
    "baba @ git+https://github.com/nacloos/baba-is-ai.git",
    "balrog-nle==0.9.0",
    "google-genai==1.52.0",
    "vllm==0.11.0",
    "balrog",
    "arc-agi>=0.0.7",
]

[tool.uv]
constraint-dependencies = [
    "aiohttp==3.13.2",
    "anyio==4.11.0",
    "cachetools==6.2.2",
    "cbor2==5.7.1",
    "certifi==2025.11.12",
    "click==8.2.1",
    "dill==0.4.0",
    "einops==0.8.1",
    "fastapi==0.124.2",
    "fastapi-cli==0.0.16",
    "fastapi-cloud-cli==0.6.0",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "fsspec==2025.10.0",
    "gitpython==3.1.45",
    "google-api-core==2.25.2",
    "google-api-python-client==2.187.0",
    "google-auth==2.43.0",
    "google-auth-httplib2==0.2.1",
    "httplib2==0.31.0",
    "huggingface-hub==0.36.0",
    "importlib-metadata==8.7.0",
    "jiter==0.12.0",
    "jsonschema==4.25.1",
    "mistral-common==1.8.6",
    "multidict==6.7.0",
    "networkx==3.5",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "platformdirs==4.5.0",
    "prometheus-client==0.23.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "psutil==7.1.3",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.4",
    "pydantic-extra-types==2.10.6",
    "pyparsing==3.2.5",
    "python-multipart==0.0.20",
    "ray==2.52.1",
    "regex==2025.11.3",
    "rich==14.2.0",
    "rich-toolkit==0.17.0",
    "rpds-py==0.29.0",
    "ruamel-yaml==0.18.16",
    "sentry-sdk==2.45.0",
    "starlette==0.50.0",
    "termcolor==3.2.0",
    "tokenizers==0.22.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "wcwidth==0.2.14",
    "wrapt==2.0.1",
]

[tool.uv.sources]
minihack = { git = "https://github.com/balrog-ai/minihack.git" }
balrog = { path = "./BALROG", editable = true }
